<resources>
    <string name="app_name">Todo</string>
    <string name="item_text">Item text</string>
    <string name="content_description_task_info">Информация</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_string">Сохранить</string>
    <string name="close_add_return_to_main_screen">Close add return to main screen</string>
    <string name="todo_item_text_hint">Что надо сделать…</string>
    <string name="importance_text">Важность</string>
    <string name="delete_string">Удалить</string>
    <string name="create_new_task">Создать новое дело</string>
    <string name="done_count">Выполнено - 0</string>
    <string name="done_before">Сделать до</string>
    <string name="delete_image_button">Delete image button</string>
    <string name="my_tasks">Мои дела</string>
    <string name="hide_visibility_image_button">Спрятать выполненные</string>
    <string name="popup_first_option">Нет</string>
    <string name="popup_second_option">Низкий</string>
    <string name="popup_third_option">!! Высокий</string>
    <string name="connection_missing_message">Отсутствует подключение</string>
    <string name="server_error_message">Ошибка на сервере</string>
    <string name="unknown_error_message">Неизвестная ошибка</string>
    <string name="description_needed_message">Необходимо ввести описание дела</string>
    <string name="loading_error_message">Произошла ошибка при загрузке списка из интернета</string>
    <string name="retry_action_text">Повторить</string>
    <string name="connection_lost_message">Нет соединения с интернетом</string>
    <string name="connection_restored_message">Cоединение с интернетом появилось</string>
    <string name="date_text">дата</string>
    <string name="settings_description">Настройки</string>
    <string name="mark_todo_item_description">Отметить как готовое или нет</string>
    <string name="back_description">Вернуться</string>
    <string name="settings_text">Настройки</string>
    <string name="choose_theme_text">Выберите тему</string>
    <string name="choose_light_theme_description">Выбрать светлую тему</string>
    <string name="choose_system_theme_description">Выбрать системную тему</string>
    <string name="choose_dark_theme_description">Выбрать темную тему</string>
    <string name="add_deadline_description">Добавить дедлайн</string>
</resources>