<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".presentation.fragments.TaskFragment">


    <ImageView
        android:id="@+id/imCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/label_light_primary"
        android:contentDescription="@string/close_add_return_to_main_screen" />

    <TextView
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_string"
        android:textAllCaps="true"
        android:textColor="@color/color_light_blue"
        app:layout_constraintBottom_toBottomOf="@+id/imCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imCancel" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imCancel">

        <EditText
            android:id="@+id/edTodoItemText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/todo_item_text_hint"
            android:inputType="textMultiLine"
            android:lines="3" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <TextView
            android:id="@+id/tvImportance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importance_text"
            android:textColor="@color/label_light_primary" />

        <Spinner
            android:id="@+id/spImportance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp" />
    </FrameLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/support_light_separator"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintDeadline"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <Switch
            android:id="@+id/swDeadline"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_before"
            android:textColor="@color/label_light_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDeadlineDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_light_blue"
            app:layout_constraintStart_toStartOf="@+id/tvDeadline"
            app:layout_constraintTop_toBottomOf="@+id/tvDeadline"
            tools:text="1 января 1972" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="50dp"
        android:background="@color/support_light_separator"
        app:layout_constraintTop_toBottomOf="@+id/constraintDeadline"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/imDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:srcCompat="@drawable/ic_delete"
        app:tint="@color/label_light_disable"
        android:contentDescription="@string/delete_image_button" />

    <TextView
        android:id="@+id/tvDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/delete_string"
        android:textColor="@color/label_light_disable"
        app:layout_constraintBottom_toBottomOf="@+id/imDelete"
        app:layout_constraintStart_toEndOf="@+id/imDelete"
        app:layout_constraintTop_toTopOf="@+id/imDelete" />
</androidx.constraintlayout.widget.ConstraintLayout>